--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
     "babel-cli": "^6.14.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-latest": "^6.14.0",
-    "bluebird": "^3.4.1"
+    "bluebird": "^3.4.1",
+    "docdown": "^0.7.1",
+    "fs-extra": "^0.30.0",
+    "gulp-eol-enforce": "^0.1.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-umd": "^0.2.0",
+    "run-sequence": "^1.2.2",
+    "vinyl-file": "^2.0.0",
+    "vinyl-fs": "^2.4.3"
   },
   "dependencies": {
     "lodash": "^4.15.0"
