--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "docdown": "^0.7.1",
     "fs-extra": "^0.30.0",
     "gulp-eol-enforce": "^0.1.0",
+    "gulp-line-ending-corrector": "^1.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-umd": "^0.2.0",
