--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "itbl",
-  "version": "1.0.0",
+  "version": "v1.0.1",
   "description": "Utility libary so es6 style iterators inspired by lodash",
   "main": "itbl.js",
   "scripts": {
-    "b": "babel-node"
+  
   },
   "keywords": [
     "util",
@@ -12,8 +12,9 @@
     "iterator",
     "backwards-compatible"
   ],
+  "respository": "https://github.com/HarrySarson/itbl",
   "author": "Harry Sarson",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-plugin-transform-runtime": "^6.15.0",
