--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "itbl",
   "version": "1.1.1",
-  "description": "Utility libary so es6 style iterators inspired by lodash",
+  "description": "Utility libary for es6 iterators",
   "main": "itbl.js",
   "scripts": {},
   "keywords": [
