--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# compiled files
+**/*-compiled.*
+
+# webstorm project files
+.idea/
