--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "itbl": "1.1.2",
     "jscs": "^3.0.7",
     "lodash": "^4.16.3",
+	"markdown-doctest": "^0.9.1",
     "qunit-extras": "^2.1.0"
   }
 }
