--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.14.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-latest": "^6.14.0",
+    "babel-preset-env": "^1.1.8",
     "bluebird": "^3.4.1",
     "docdown": "^0.7.1",
     "fs-extra": "^0.30.0",
