add code coverage and fix style task on windows

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ notifications:
         - harry.sarson@hotmail.co.uk
     on_success: never
     on_failure: always
+
+
+after_success: 'npm run coveralls'
