--- a/.gitignore
+++ b/.gitignore
@@ -40,8 +40,8 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-# compiled files
-**/*-compiled.*
+# babel compiled files
+compiled/
 
 # webstorm project files
 .idea/
