--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "version": "npm run doc && npm run test:doc && git add -A docs",
     "style": "npm run style:main",
     "style:main": "jscs itbl.js",
-    "style:test": "jscs test/*.js",
+    "style:test": "jscs test/test.babel.js",
     "test": "npm run test:main",
     "test:doc": "markdown-doctest docs/*.md",
     "test:main": "babel-node test/test.babel.js",
+    "compile": "mkdir compiled && babel ./ --out-dir compiled --ignore node_modules --copy-files",
+    "coverage": "istanbul compiled/test/test.js",
     "doc": "npm run doc:site && npm run doc:md && npm run test:doc",
     "doc:site": "babel-node lib/preprocess-html && jsdoc -c .jsdoc.json && babel-node lib/postprocess-html && rm docs/replaced -r",
     "doc:md": "babel-node lib/preprocess-md && node lib/build-md && rm docs/replaced -r"
@@ -32,6 +34,7 @@
     "docdown": "^0.7.1",
     "fs-extra": "^0.30.0",
     "glob": "^7.1.1",
+    "istanbul": "^0.4.5",
     "itbl": "1.1.2",
     "jscs": "^3.0.7",
     "lodash": "^4.16.3",
