--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "test:doc": "markdown-doctest docs/*.md",
     "test:main": "babel-node test/test.babel.js",
     "compile": "mkdir compiled && babel ./ --out-dir compiled --ignore node_modules --copy-files",
-    "coverage": "istanbul compiled/test/test.js",
-    "coveralls": "coveralls",
+    "istanbul": "istanbul compiled/test/test.js",
+    "coveralls": "coverage/lconv.info > coveralls",
     "doc": "npm run doc:site && npm run doc:md && npm run test:doc",
     "doc:site": "babel-node lib/preprocess-html && jsdoc -c .jsdoc.json && babel-node lib/postprocess-html && rm docs/replaced -r",
     "doc:md": "babel-node lib/preprocess-md && node lib/build-md && rm docs/replaced -r"
