--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "compile:test": "mkdirp compiled/test && babel test --out-dir compiled/test",
     "istanbul": "istanbul cover compiled/test/test.babel.js",
     "coveralls": "shx cat coverage/lcov.info > coveralls",
+    "codecov": "codecov",
     "doc": "npm run doc:site && npm run doc:md && npm run test:doc",
     "doc:site": "babel-node lib/preprocess-html && jsdoc -c .jsdoc.json && babel-node lib/postprocess-html && shx rm -r docs/replaced ",
     "doc:md": "babel-node lib/preprocess-md && node lib/build-md && shx rm -r docs/replaced"
@@ -36,6 +37,7 @@
     "babel-cli": "^6.14.0",
     "babel-preset-env": "^1.1.8",
     "bluebird": "^3.4.1",
+    "codecov": "^1.0.1",
     "coveralls": "^2.11.15",
     "docdown": "^0.7.1",
     "fs-extra": "^0.30.0",
