--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 
+# Documentation - will be explicitly added when package is versioned
+docs
+
 # nyc test coverage
 .nyc_output
 
