remove backwards compatible tag

--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "keywords": [
     "util",
     "es6",
-    "iterator",
-    "backwards-compatible"
+    "iterator"
   ],
   "repository": "https://github.com/HarrySarson/itbl",
   "author": "Harry Sarson",
