--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "babel-cli": "^6.14.0",
     "babel-preset-env": "^1.1.8",
+    "babel-plugin-transform-runtime": "^6.22.0",
     "bluebird": "^3.4.1",
     "codecov": "^1.0.1",
     "docdown": "^0.7.1",
