--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "preversion": "npm test && npm run style",
     "version": "npm run doc && npm run test:doc && git add --all --force docs",
+    "prepublish": "npm run compile",
     "style": "npm run style:main",
     "style:main": "jscs itbl.js",
     "style:test": "jscs test/test.babel.js",
