--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ node_js:
   - 7
   - 6
 
+before_script:
+  npm run compile
+  
 notifications:
   email:
     recipients:
@@ -13,6 +16,5 @@ notifications:
 
 
 after_success: 
-  npm run compile && 
   npm run istanbul &&
-  npm run codecov;
+  npm run codecov
