--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.14.0",
-    "babel-preset-env": "^1.1.8",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.1.8",
     "bluebird": "^3.4.1",
     "codecov": "^1.0.1",
     "docdown": "^0.7.1",
@@ -42,8 +42,8 @@
     "istanbul": "^0.4.5",
     "itbl": "1.1.2",
     "jscs": "^3.0.7",
+    "jsdoc": "^3.4.3",
     "lodash": "^4.16.3",
-    "mkdirp": "^0.5.1",
     "markdown-doctest": "^0.9.1",
     "minami": "^1.1.1",
     "mkdirp": "^0.5.1",
