--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.1.8",
     "bluebird": "^3.4.1",
-    "codecov": "^1.0.1",
+    "codecov": "^2.3.0",
     "docdown": "^0.7.1",
     "find-up": "^2.1.0",
     "glob": "^7.1.1",
@@ -48,9 +48,9 @@
     "markdown-doctest": "^0.9.1",
     "minami": "^1.1.1",
     "mkdirp": "^0.5.1",
-    "qunit-extras": "^2.1.0",
+    "qunit-extras": "^3.0.0",
     "qunitjs": "^2.1.1",
-    "replace-in-file": "2.0.3",
+    "replace-in-file": "^3.0.0-beta.2",
     "shx": "^0.2.2"
   }
 }
